Fixed "Horizontal clipping" content margin bottom

--- a/css/common.css
+++ b/css/common.css
@@ -1059,7 +1059,7 @@ footer a {
   display: flex;
   justify-content: space-between;
   padding: 5% 4% 5%;
-  margin-bottom: 40%;
+  margin-bottom: 50%;
 }
 
 .horizontal .clipping-title {
@@ -1134,7 +1134,7 @@ footer a {
 @media screen and (max-width: 750px) {
   #clippingOfWorks.horizontal {
     flex-direction: column;
-    margin-bottom: 60%;
+    margin-bottom: 100%;
   }
 
   .horizontal .clipping-title {
